Jenkins-VM/Main.tf
provider "azurerm" {
  features {}
  subscription_id = "01ca380c-fcf2-4075-8c67-82b2de4de29a"
}

resource "azurerm_resource_group" "rg" {
  name     = "jenkins-rahulrg"
  location = "West US"
}

resource "azurerm_virtual_network" "vnet" {
  name                = "jenkins-rahulvnet"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}

resource "azurerm_subnet" "subnet" {
  name                 = "jenkins-rahulsubnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.1.0/24"]
}

resource "azurerm_network_interface" "nic" {
  name                = "jenkins-rahulnic"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  ip_configuration {
    name                          = "jenkins-rahulipconfig"
    subnet_id                     = azurerm_subnet.subnet.id
    private_ip_address_allocation = "Dynamic"
	private_ip_address            = "10.0.1.10"
    public_ip_address_id          = azurerm_public_ip.public_ip.id
  }
}

resource "azurerm_public_ip" "public_ip" {
  name                = "jenkins-rahulpublic-ip"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  allocation_method   = "Dynamic"
}

resource "azurerm_network_security_group" "nsg" {
  name                = "jenkins-rahulnsg"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "allow_ssh"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "allow_jenkins"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "8080"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_network_interface_security_group_association" "nsg_assoc" {
  network_interface_id      = azurerm_network_interface.nic.id
  network_security_group_id = azurerm_network_security_group.nsg.id
}

#resource "azurerm_linux_virtual_machine" "jenkins_vm" {
#  name                = "jenkins-rahulvm"
 # resource_group_name = azurerm_resource_group.rg.name
  #location            = azurerm_resource_group.rg.location
  #size                = "Standard_B1s"
  #admin_username      = "azureuser"
  #network_interface_ids = [
    #azurerm_network_interface.nic.id,
  #]

  #admin_ssh_key {
   # username   = "azureuser"
    #public_key = file("~/.ssh/id_rsa.pub")
  #}

  #os_disk {
    #caching              = "ReadWrite"
    #storage_account_type = "Standard_LRS"
   # name                 = "jenkins-os-disk"
  #}

  #source_image_reference {
    #publisher = "Canonical"
    #offer     = "0001-com-ubuntu-server-jammy"
    #sku       = "22_04-lts"
   # version   = "latest"
  #}

  #custom_data = filebase64("cloud-init-jenkins.yaml")

 # disable_password_authentication = true
#}
resource "azurerm_linux_virtual_machine" "jenkins_vm" {
  name                = "jenkins-rahulvm"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  size                = "Standard_B1s"
  admin_username      = "azureuser"
  admin_password      = "StrongP@ssw0rd123" # 🔐 Replace with a strong password
  network_interface_ids = [
    azurerm_network_interface.nic.id,
  ]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
    name                 = "jenkins-os-disk"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts"
    version   = "latest"
  }

  custom_data = filebase64("cloud-init-jenkins.yaml")

  disable_password_authentication = false # ✅ Allow password login
}
